# OPNGMS

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  docker-compose.caddy.yml  docker-compose.full.yml  docker-compose.logs.multinode.yml  docker-compose.logs.yml  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.traefik.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: cli.py  main.py  worker.py
backend/app/api/: audit.py  auth.py  catalog.py  config.py  devices.py  events.py  firewall_rules.py  firmware.py  groups.py  ids.py  log_fleet.py  log_forwarding.py  logs.py  me_tenants.py  memberships.py  mfa.py  monit.py  monitoring.py  profiles.py  report_schedules.py  reports.py  retention.py  settings.py  setup.py  smtp.py  system.py  templates.py  tenants.py  trusted_devices.py  users.py
backend/app/core/: access.py  config.py  crypto.py  db.py  db_roles.py  deps.py  queue.py  ratelimit.py  rbac.py  rls.py  security.py
backend/app/models/: __init__.py  alert.py  app_setting.py  audit.py  base.py  catalog_cache.py  config_change.py  config_profile.py  config_snapshot.py  config_template.py  device.py  device_log_forwarding.py  event.py  firmware_action.py  generated_report.py  geoip_cache.py  group.py  ingest_cursor.py  membership.py  metric.py  perimeter_attacker.py  report_schedule.py  report_settings.py  revoked_syslog_cert.py  session.py  silent_tenant_alert.py  smtp_settings.py  syslog_ca.py  syslog_ca_key.py  template_override.py  tenant.py  tenant_retention.py  trusted_device.py  user.py  user_mfa.py  user_recovery_code.py  webauthn_credential.py
backend/app/repositories/: alert.py  audit.py  config_change.py  config_snapshot.py  device.py  device_log_forwarding.py  event.py  generated_report.py  group.py  membership.py  metric.py  report_schedule.py  report_settings.py  tenant.py  tenant_retention.py  user.py
backend/app/schemas/: alert.py  audit.py  auth.py  catalog.py  config.py  device.py  event.py  firmware.py  generated_report.py  group.py  health.py  log_fleet.py  log_forwarding.py  logs.py  membership.py  metric.py  mfa.py  perimeter.py  profiles.py  report.py  report_schedule.py  report_settings.py  retention.py  smtp.py  system.py  templates.py  tenant.py  user.py
backend/app/scripts/: rekey_secrets.py
backend/app/services/: alerting.py  (+56 more)
backend/migrations/: env.py
backend/scripts/: export_openapi.py  syslog_pipeline_smoke.py
backend/tests/: conftest.py  factories.py  opn_fixtures.py  test_2b_integration.py  test_action_sweeper.py  test_alert_model.py  test_alert_repository.py  test_alerting.py  test_alerts_range_index.py  test_app_settings.py  test_attacker_countries.py  test_attacker_countries_api.py  test_audit.py  test_audit_api.py  test_audit_coverage.py  test_audit_gapfill.py  test_auth.py  test_auth_audit.py  test_b_integration.py  test_c_integration.py  test_capability.py  test_catalog_api.py  test_catalog_cache_model.py  test_catalog_cli.py  test_catalog_diff.py  test_catalog_diff_endpoint.py  test_catalog_discover.py  test_catalog_emit.py  test_catalog_endpoints.py  test_catalog_fetch.py  test_catalog_form_parser.py  test_catalog_kind.py  test_catalog_live.py  test_catalog_menu.py  test_catalog_model_parser.py  test_catalog_model_parser_grid.py  test_catalog_plugins_discover.py  test_catalog_provider_fetch.py  test_catalog_provider_plugins.py  test_catalog_provider_resolve.py  (+244 more)
(+543 files in other folders)
