[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opngms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "email-validator>=2.3.0",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "httpx>=0.27",
    "arq>=0.26",
    "redis>=5.0",
    "defusedxml>=0.7.1",
    "jinja2>=3.1",
    "weasyprint>=62",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=1.4.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
