[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "opngms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "email-validator>=2.3.0",
    "aiosmtplib>=4.0",
    "pydantic-settings>=2.3",
    "argon2-cffi>=25.1.0",
    "cryptography>=42.0",
    "httpx>=0.27",
    "arq>=0.28.0",
    "redis>=5.0",
    "defusedxml>=0.7.1",
    "pyotp>=2.9",
    "jinja2>=3.1",
    "weasyprint>=62",
    "python-multipart>=0.0.9",
    "maxminddb>=2.6",
    "babel>=2.14",
    "webauthn>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.21",
    "ruff>=0.15.17",
    "mmdb-writer>=0.2.7",  # test-only: generate the tiny GeoIP fixture mmdb (tests/fixtures)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the backend root on sys.path during tests so the offline `tools.*` packages (e.g. the OPNsense
# catalog generator) are importable without shipping them in the installed app wheel.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line-too-long — the project never enforced a line length; defer to a formatter pass
    "B008",   # function-call-in-default-argument — this is FastAPI's Depends()/Query() pattern
    "UP042",  # str-enum — keep the explicit `class Action(str, enum.Enum)` for now
]

[tool.setuptools.packages.find]
include = ["app*"]
